--- a/konserler.html
+++ b/konserler.html
@@ -90,9 +90,9 @@
             font-size: 2.5rem; 
             color: var(--accent); 
             margin-bottom: 20px;
-            text-transform: uppercase; 
+            text-transform; 
             letter-spacing: 3px; 
-            font-weight: 700; /* Kalın */
+            font-weight: 500; /* Kalın */
         }
         
         .info-wrapper p { 
