--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <h1>Mahmut Burak<br>ASLANTAŞ</h1>
        
         <div class="quote">
-            "Müziği sadece bir ses dizisi değil, kültürler arası bir köprü olarak konumlandırmaktadır."
+            “Sanatsız kalan bir milletin, hayat damarlarından biri kopmuş demektir.” Mustafa Kemal ATATÜRK
         </div>
 
         <div class="cta-buttons">
