--- a/konserler.html
+++ b/konserler.html
@@ -351,11 +351,11 @@
             <div class="gallery-grid">
                 <div class="gallery-item">
                     <img src="https://i.hizliresim.com/hcxh8kf.JPG" alt="Konser Afişi">
-                    <h4>TRT Türkü Radyo Programı</h4>
+                    <h4>Yıldızların Altında</h4>
                 </div>
                 <div class="gallery-item">
                     <img src="https://i.hizliresim.com/bc69112.JPG" alt="Konser Afişi">
-                    <h4>Genç Nesilden Türküler</h4>
+                    <h4>Sanat Müziği Koro Konseri</h4>
                 </div>
                 <div class="gallery-item">
                     <img src="https://i.hizliresim.com/6vp28ri.JPG" alt="Konser Afişi">
@@ -363,11 +363,11 @@
                 </div>
                 <div class="gallery-item">
                     <img src="https://i.hizliresim.com/8u4tkrb.JPG" alt="Konser Afişi">
-                    <h4>TRT Gençlik Korosu</h4>
+                    <h4>Sanat Müziği Koro Konseri</h4>
                 </div>
                 <div class="gallery-item">
                     <img src="https://i.hizliresim.com/2hvoqlr.jpg" alt="Konser Afişi">
-                    <h4>Bahar Konseri</h4>
+                    <h4>ADÜ Ses Finali</h4>
                 </div>
             </div>
         </div>
