--- a/konserler.html
+++ b/konserler.html
@@ -347,7 +347,7 @@
         </div>
 
         <div class="gallery-section">
-            <h2>DİĞER KONSERLER</h2>
+            <h2>GEÇMİŞ KONSERLER</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
                     <img src="https://i.hizliresim.com/hcxh8kf.JPG" alt="Konser Afişi">
