--- a/konserler.html
+++ b/konserler.html
@@ -359,7 +359,7 @@
                 </div>
                 <div class="gallery-item">
                     <img src="https://i.hizliresim.com/6vp28ri.JPG" alt="Konser Afişi">
-                    <h4>East to West Projesi</h4>
+                    <h4>East to West - Aydın Konseri</h4>
                 </div>
                 <div class="gallery-item">
                     <img src="https://i.hizliresim.com/8u4tkrb.JPG" alt="Konser Afişi">
