--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <link rel="shortcut icon" href="ikonn.ico" type="image/x-icon">
     <meta name="google-site-verification" content="_M5BfxWGwxt47kzLdqDckVCSwkliVvvoYFVn8SdsrwM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
