Add additional lines to the poem in HTML file

--- a/siir-cehennem-nari.html
+++ b/siir-cehennem-nari.html
@@ -130,7 +130,11 @@
 Ala gözlü bir güzelden gayrı.
 Var mıdır bunca derdin dermanı.
 Dermanı vardır, bekle zamanı.
-Zalım felek geldi beni seçti.</div>
+
+Zalım felek geldi beni seçti.
+Dermansız derdi başıma açtı.
+Yaş aldı başını ömür geçti.
+Bir daha göremedim o zatı.</div>
     </div>
 
     <footer>
