--- a/siir-dertli-yoldas.html
+++ b/siir-dertli-yoldas.html
@@ -130,7 +130,21 @@
 Yükünü kenarı indir.
 Nedir bu gözündeki yaş?
 De bana derdini dindir.
-Bu dünyanın derdi bitmez.</div>
+
+Bu dünyanın derdi bitmez.
+Senin feryatların dinmez.
+Sil gözlerinin yaşını.
+Kahırınan ömür geçmez.
+
+Alam ben seni koynuma.
+Vuram bağrındaki tele.
+Ben dinleyeyim sen ağla.
+Perdelerin gelsin dile.
+
+Bu dünyanın derdi bitmez.
+Senin feryatların dinmez.
+Sil gözlerinin yaşını.
+Kahırınan ömür geçmez.</div>
     </div>
 
     <footer>
