--- a/siir-dertli-yoldas.html
+++ b/siir-dertli-yoldas.html
@@ -144,7 +144,9 @@ Perdelerin gelsin dile.
 Bu dünyanın derdi bitmez.
 Senin feryatların dinmez.
 Sil gözlerinin yaşını.
-Kahırınan ömür geçmez.</div>
+Kahırınan ömür geçmez.
+        
+        Mahmut Burak ASLANTAŞ</div>
     </div>
 
     <footer>
