--- a/siir-cesm-i-derya.html
+++ b/siir-cesm-i-derya.html
@@ -144,7 +144,9 @@ Sanki, gül bahçesidir yanakların.
 Ey derya gözlü avaz-ı bülbül dilber.
 Varlığının zerresi beni benden eder.
 Hoş sedan uğruna çağlar dereler.
-Bir gülüşüne özüm dünyayı neyler?</div>
+Bir gülüşüne özüm dünyayı neyler?
+        
+         Mahmut Burak ASLANTAŞ</div>
     </div>
 
     <footer>
