--- a/siir-gonlumde-irmaklar-caglar.html
+++ b/siir-gonlumde-irmaklar-caglar.html
@@ -130,7 +130,16 @@
 Dereler akar uzunca.
 Gönlümde Irmaklar Çağlar.
 Mukaddes ismin duyunca.
-Cennet zaviyesi gönlüm.</div>
+
+Cennet zaviyesi gönlüm.
+Senin hüznün ile doldu.
+Yarsız kalan gönül bahçem.
+Dayanmadı, viran oldu.
+
+Adın düştü gönül suya.
+Sesi vurdu her bir yana.
+Bir kıvılcım döndü ara.
+Yanar oldu içim yana.</div>
     </div>
 
     <footer>
