Update poem text in siir-gonul-derd-ile.html

--- a/siir-gonul-derd-ile.html
+++ b/siir-gonul-derd-ile.html
@@ -128,8 +128,21 @@
         <h1>Gönül derd ile</h1>
         <div class="poem-text">Gönül derd ile yanmada harâbım,
 Ne dermân olur âhımda ne şâbım.
-Ne chashmimde karar var, ne hayâlîm,
-Yakıp geçti beni aşkın azâbım.</div>
+
+Ne çeşmimde karar var, ne hayâlîm,
+Yakıp geçti beni aşkın azâbım.
+
+Gecem gündüzüm oldu bir ocaktır,
+Ne söner, ne tükenir bu hicâbım.
+
+Gönül der ki bulur bir gün emânı,
+Velî bil ki ebedîdir ıztırâbım.
+
+Sorarsan derdimin aslını, cânâ,
+O hicrânın odudur ki şitâbım.
+
+Ateşin gibi yan ey dil, yan ey dil,
+Ki âhında nihândır intisâbım.</div>
     </div>
 
     <footer>
