--- a/siir-her-adimda-ask.html
+++ b/siir-her-adimda-ask.html
@@ -128,9 +128,23 @@
         <h1>Her Adımda Aşk</h1>
         <div class="poem-text">Dağın koynunda derinden bir nida.
 Su taşla konuşur, gönlüm duyar da.
-Her şey Hak'tan gelir, ben bilmem daha.
+Her şey Hak’tan gelir, ben bilmem daha.
 Her taşta bir sır var, bilirim sessiz.
-Bir yıldız kayar da durup kalırım.</div>
+
+Bir yıldız kayar da durup kalırım.
+Ağaçlar eğilir, göğe bakarım.
+Yol uzun, ben yürürüm de bıkarım.
+Her adımda seni sorarım sessiz.
+
+Gece, yıldızlar anlatır sırları.
+Suya yansır, göğe yansır efkarı.
+Herkes dalıp uyurken akşamları.
+Sabırla yürürüm, yürürüm sessiz.
+
+Yolcular geçer, izleri kalır yerde.
+Her adımda aşk vardır, her nefeste.
+Gönül bulur huzuru, Hakk’ı bilirse.
+O yolun sonuna ben varırım sessiz.</div>
     </div>
 
     <footer>
