Add additional verses to the poem

--- a/siir-kendine-gel-ademoglu.html
+++ b/siir-kendine-gel-ademoglu.html
@@ -130,7 +130,11 @@
 Her sözün adabı vardır.
 Kendine gel Ademoğlu.
 Burdan öte ahret vardır.
-Daim ol alçak gönüllü.</div>
+
+Daim ol alçak gönüllü
+Edep vardır, haya vardır.
+İncitme ha bir gönülü.
+Peygamberin hatrı vardır.</div>
     </div>
 
     <footer>
