--- a/siir-pencereden-gelen.html
+++ b/siir-pencereden-gelen.html
@@ -130,7 +130,16 @@
 Yaktın odpare nigahınla bağrımı
 Beni yolumdan döndüren ah şu kader
 Bilmem alın yazım mı, kara yazım mı?
-Gelişin bahar oldu gidişin hazan.</div>
+
+Gelişin bahar oldu gidişin hazan
+Kapladı yüreğimi güzün matemi
+Soldu yeşil yapraklar döküldü gamdan
+Yaktın viran eyledin gönül bahçemi.
+
+Sormasın hiç kimse bu garip halimi
+Öldü medar-ı sürurum oldu talan
+Harcadın benim en güzel senelerimi.
+Demek sevgin de yalan sevdan da yalan.</div>
     </div>
 
     <footer>
