--- a/siir-yarim-kalan.html
+++ b/siir-yarim-kalan.html
@@ -128,8 +128,24 @@
         <h1>Yarım Kalan</h1>
         <div class="poem-text">Yürüdüm… yollar tükendi, dizlerimde takat yok.
 Bir yarım türküyüm ben, seyrimde karar yok.
+
 Bir yanım bahar ister, öbür yanım kış içinde.
-Gözümde donmuş yaş var, elimde umut yok.</div>
+Gözümde donmuş yaş var, elimde umut yok.
+
+Ne elimde teselli var, ne bahtımda tesadüf.
+Küllerimden doğmak için bile ateşim yok!
+
+Söndü beni var eden içimdeki kor ateş.
+Artık en ufak bir yelin kıpırtısına mecburum.
+
+Ey rüzgâr! Taşı beni, savur boşluklara.
+Belki bir uçurumun koynunda tamam olurum.
+
+Gecelerime dolan yıldızlar sönerken.
+Ben hâlâ eksik bir güneşi beklerim.
+
+Yenilmişim kendime, yorulmuşum zamana.
+Yarım kalana değil, yarım kalışa mahkûmum!</div>
     </div>
 
     <footer>
