--- a/siir-yorgun-saatler.html
+++ b/siir-yorgun-saatler.html
@@ -129,7 +129,24 @@
         <div class="poem-text">Bir günün tortusu kaldı üzerimde,
 yürüyen gölgeler gibi sessizim.
 Ne bir başlangıcın sevinci var içimde,
-ne de bir bitişin huzuru.</div>
+ne de bir bitişin huzuru.
+
+Her şey yarım kalmış.
+Zaman ağır aksak sürükleniyor,
+ben de peşinden,
+kendi yorgunluğuma zincirli.
+
+Yenilgi bir perde gibi örtüyor gözlerimi,
+ufka bakıyorum,
+renksiz, kimsesiz, boş.
+Artık hiçbir şeye şaşmıyorum;
+her şey çoktan olup bitmiş gibi.
+
+İçimde sessiz bir boşluk,
+ne sönüyor ne de yanıyor.
+Belki de hayat budur:
+Bitmeyen bir bekleyiş,
+tükenmeyen bir yorgunluk.</div>
     </div>
 
     <footer>
