--- a/siir-yoruldum.html
+++ b/siir-yoruldum.html
@@ -130,7 +130,11 @@
 Yar derdi ile yaş dökmekten
 Feryad edip inlemekten
 Gözlerimde fer (yaş) kalmadı
-Gül gibi sarardım soldum.</div>
+
+Gül gibi sarardım soldum
+Genç delikanlı yaşımda
+Kaderime tüm sitemim
+Gözlerimin al (kan) yaşında.</div>
     </div>
 
     <footer>
