--- a/nota-ardic-sazim.html
+++ b/nota-ardic-sazim.html
@@ -98,7 +98,15 @@
                         Ruhun üfürdü teline<br>
                         Gel benimle konuş diye<br>
                         <br>
-                        (Sözlerin devamını buraya ekleyebilirsiniz...)
+                        Düştün ustanın eline.
+Ruhun üfürdü teline.
+Gel benimle konuş diye.
+Benim canım dertli sazım.
+
+Ben düştüm ana karnına.
+Sen düştün kara toprağa.
+Kursaktan geldin elime.
+Benim güzel ardıç sazım.
                     </div>
                 </div>
                 <a href="nota-ardic-sazim.pdf" download class="action-btn">
