--- a/nota-ardic-sazim.html
+++ b/nota-ardic-sazim.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 
     <style>
-        /* CSS kodları üsttekiyle birebir aynı */
+        /* CSS AYARLARI */
         :root { --primary: #000000; --accent: #c5a059; --bg-dark: #0f0f0f; --bg-gradient: linear-gradient(135deg, #0a0a0a 0%, #161616 100%); --text: #ffffff; --text-secondary: #b0b0b0; }
         body { font-family: 'Montserrat', sans-serif; background: var(--bg-dark); background-image: var(--bg-gradient); color: var(--text); line-height: 1.8; margin: 0; display: flex; flex-direction: column; min-height: 100vh; }
         nav { background: #000; padding: 15px 0; border-bottom: 1px solid rgba(197, 160, 89, 0.2); position: sticky; top: 0; z-index: 1000; }
@@ -94,19 +94,15 @@
                 <div class="lyrics-box">
                     <h3>Şarkı Sözleri</h3>
                     <div class="lyrics-text">
-                        Düştün ustanın eline<br>
-                        Ruhun üfürdü teline<br>
-                        Gel benimle konuş diye<br>
+                        Düştün ustanın eline.<br>
+                        Ruhun üfürdü teline.<br>
+                        Gel benimle konuş diye.<br>
+                        Benim canım dertli sazım.<br>
                         <br>
-                        Düştün ustanın eline.
-Ruhun üfürdü teline.
-Gel benimle konuş diye.
-Benim canım dertli sazım.
-
-Ben düştüm ana karnına.
-Sen düştün kara toprağa.
-Kursaktan geldin elime.
-Benim güzel ardıç sazım.
+                        Ben düştüm ana karnına.<br>
+                        Sen düştün kara toprağa.<br>
+                        Kursaktan geldin elime.<br>
+                        Benim güzel ardıç sazım.
                     </div>
                 </div>
                 <a href="nota-ardic-sazim.pdf" download class="action-btn">
