--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         
         <div class="quote">
             “Sanatsız kalan bir milletin, hayat damarlarından biri kopmuş demektir.”<br>
-            <span style="font-size: 0.9em; color: var(--accent); margin-top: 10px; display:block;">— Mustafa Kemal ATATÜRK</span>
+            <span style="font-size: 0.9em; color: var(--accent); margin-top: 10px; display:block;">Mustafa Kemal ATATÜRK</span>
         </div>
 
         <div class="cta-buttons">
