--- a/online-egitim.html
+++ b/online-egitim.html
@@ -222,7 +222,7 @@
 
             <div class="apply-container">
                 <h3 style="text-align: center; margin-bottom: 25px;">BAŞVURU FORMU</h3>
-                <form action="https://formspree.io/f/mbdyeeba" method="POST" class="form-group">
+                <form action="https://formspree.io/f/xnjvyknz" method="POST" class="form-group">
                     <input type="text" name="ad_soyad" placeholder="Ad Soyad" required>
                     <div style="display: flex; gap: 10px;">
                         <input type="number" name="yas" placeholder="Yaş (16+)" min="16" required style="flex:1;">
