--- a/online-egitim.html
+++ b/online-egitim.html
@@ -246,7 +246,7 @@
                 <h2 style="color: var(--accent);">ÖĞRENCİ PANELİ</h2>
                 <p style="color: #ccc;">Hoş geldin! Dikte ve egzersiz çalışmalarını aşağıdan dinleyebilirsin.</p>
                 <br>
-                <a href="https://wa.me/905XXXXXXXXX" target="_blank" class="whatsapp-btn">
+                <a href="https://wa.me/905335060921" target="_blank" class="whatsapp-btn">
                     <i class="fab fa-whatsapp"></i> ÖDEVİNİ GÖNDER (WHATSAPP)
                 </a>
             </div>
