--- a/online-egitim.html
+++ b/online-egitim.html
@@ -228,7 +228,7 @@
                     <i class="fas fa-laptop"></i>
                     <i class="fas fa-music"></i>
                 </div>
-                ÖĞRENCİ PORTALİNE GİRİŞ
+                ÖĞRENCİ PORTALINA GİRİŞ YAP
             </button>
         </div>
 
