--- a/online-egitim.html
+++ b/online-egitim.html
@@ -403,8 +403,8 @@
     <script>
         // --- 1. ÖĞRENCİ VERİTABANI ---
         const ogrenciler = {
-            "1234": { ad: "Ahmet", soyad: "YILMAZ" },
-            "2026": { ad: "Elif", soyad: "DEMİR" },
+            "amanbecano": { ad: "Gokuğ", soyad: "PAINTER" },
+            "elifkarman123": { ad: "Elif", soyad: "KARMAN" },
             "mahmut": { ad: "Mahmut Burak", soyad: "ASLANTAŞ" }
         };
 
@@ -435,15 +435,15 @@
 
         // --- 3. DERS NOTLARI LİSTESİ (baglama-ders-teori) ---
         const dersNotlariDosyalari = [
-            { ad: "Ders Notu 1", dosya: "1.png" },
-            { ad: "Ders Notu 2", dosya: "2.png" },
-            { ad: "Ders Notu 3", dosya: "3.png" },
-            { ad: "Ders Notu 4", dosya: "4.png" },
-            { ad: "Ders Notu 5", dosya: "5.png" },
+            { ad: "Temel Müzik Bilgileri 1", dosya: "1.png" },
+            { ad: "Temel Müzik Bilgileri 2", dosya: "2.png" },
+            { ad: "Nota Süre Değerleri 1", dosya: "3.png" },
+            { ad: "Nota İsimleri ve Notaların Yerleri", dosya: "4.png" },
+            { ad: "Bağlamanın Bölümleri", dosya: "5.png" },
             { ad: "Ders Notu 6", dosya: "6.png" },
-            { ad: "Ders Notu 7", dosya: "7.png" },
-            { ad: "Ders Notu 8", dosya: "8.png" },
-            { ad: "Ders Notu 9", dosya: "9.png" },
+            { ad: "Parmak Numaraları (Kısa Sap)", dosya: "7.png" },
+            { ad: "Klavyede (Sapta) Notaların Yerleri", dosya: "8.png" },
+            { ad: "Sesli ve Sessiz Süre Değerleri", dosya: "9.png" },
             { ad: "Nota Süreleri", dosya: "nota-sureleri.png" },
             { ad: "Nota Süreleri 2", dosya: "nota-sureleri1.png" }
         ];
