--- a/online-egitim.html
+++ b/online-egitim.html
@@ -102,7 +102,7 @@
         
         .hamburger-btn { font-size: 1.5rem; color: var(--accent); cursor: pointer; margin-bottom: 30px; align-self: flex-start; }
         .user-info { margin-bottom: 40px; border-bottom: 1px solid #333; padding-bottom: 20px; }
-        .user-name { color: var(--accent); font-family: 'Playfair Display', serif; font-size: 1.4rem; font-weight: 700; line-height: 1.2; }
+        .user-name { color: var(--accent); font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', sans-serif; font-size: 1.4rem; font-weight: normal; line-height: 1.2; }
         .premium-badge { font-size: 0.7rem; color: #fff; background: #333; padding: 4px 8px; border-radius: 4px; display: inline-block; margin-top: 10px; letter-spacing: 1px; text-transform: uppercase; }
         
         .menu-link { display: flex; align-items: center; gap: 15px; color: #bbb; text-decoration: none; padding: 12px; margin-bottom: 5px; border-radius: 5px; transition: 0.3s; cursor: pointer;}
@@ -126,7 +126,7 @@
 
         /* DASHBOARD */
         .dashboard-header h1 { 
-            font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; /* FONT GÜNCELLENDİ */
+            font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
             color: var(--accent); margin-bottom: 30px; border-bottom: 1px solid #333; padding-bottom: 10px; 
             font-weight: normal;
         }
@@ -448,6 +448,30 @@
             { ad: "Nota Süreleri 2", dosya: "nota-sureleri1.png" }
         ];
 
+        // --- 4. KISA SAP NOTALARI (a-u arası, q hariç, .jpg) ---
+        const kisaSapNotalari = [
+            { ad: "Nota a", dosya: "a.jpg" },
+            { ad: "Nota b", dosya: "b.jpg" },
+            { ad: "Nota c", dosya: "c.jpg" },
+            { ad: "Nota d", dosya: "d.jpg" },
+            { ad: "Nota e", dosya: "e.jpg" },
+            { ad: "Nota f", dosya: "f.jpg" },
+            { ad: "Nota g", dosya: "g.jpg" },
+            { ad: "Nota h", dosya: "h.jpg" },
+            { ad: "Nota i", dosya: "i.jpg" },
+            { ad: "Nota j", dosya: "j.jpg" },
+            { ad: "Nota k", dosya: "k.jpg" },
+            { ad: "Nota l", dosya: "l.jpg" },
+            { ad: "Nota m", dosya: "m.jpg" },
+            { ad: "Nota n", dosya: "n.jpg" },
+            { ad: "Nota o", dosya: "o.jpg" },
+            { ad: "Nota p", dosya: "p.jpg" },
+            { ad: "Nota r", dosya: "r.jpg" },
+            { ad: "Nota s", dosya: "s.jpg" },
+            { ad: "Nota t", dosya: "t.jpg" },
+            { ad: "Nota u", dosya: "u.jpg" }
+        ];
+
         function menuyuAcKapa() { document.getElementById("anaMenu").classList.toggle("aktif"); }
         function toggleSidebar() { document.getElementById("sidebar").classList.toggle("collapsed"); }
         function girisAc() { document.getElementById("login-overlay").style.display = "flex"; }
@@ -488,7 +512,7 @@
             else sayfaGoster('dashboard-view', false);
         };
 
-        // MATERYAL AÇMA: DERS NOTLARI LİSTESİNİ GÖSTERİR
+        // MATERYAL AÇMA: Ders Notları ve Kısa Sap Notaları
         function materyalAc(kategori) {
             document.getElementById("mat-category-title").innerText = kategori;
             const container = document.getElementById("materials-container");
@@ -499,6 +523,15 @@
                     container.innerHTML += `
                         <div class="mat-item" onclick="resimGosterModal('./baglama-ders-teori/${item.dosya}')" style="cursor:pointer;">
                             <i class="fas fa-file-image" style="color: var(--accent); font-size: 2rem; display: block; margin-bottom: 10px;"></i>
+                            <span>${item.ad}</span>
+                        </div>
+                    `;
+                });
+            } else if (kategori === 'Kısa Sap Notaları') {
+                kisaSapNotalari.forEach(item => {
+                    container.innerHTML += `
+                        <div class="mat-item" onclick="resimGosterModal('./kisa-sap/${item.dosya}')" style="cursor:pointer;">
+                            <i class="fas fa-music" style="color: var(--accent); font-size: 2rem; display: block; margin-bottom: 10px;"></i>
                             <span>${item.ad}</span>
                         </div>
                     `;
