--- a/online-egitim.html
+++ b/online-egitim.html
@@ -450,26 +450,26 @@
 
         // --- 4. KISA SAP NOTALARI (a-u arası, q hariç, .jpg) ---
         const kisaSapNotalari = [
-            { ad: "Nota a", dosya: "a.jpg" },
-            { ad: "Nota b", dosya: "b.jpg" },
-            { ad: "Nota c", dosya: "c.jpg" },
-            { ad: "Nota d", dosya: "d.jpg" },
-            { ad: "Nota e", dosya: "e.jpg" },
-            { ad: "Nota f", dosya: "f.jpg" },
-            { ad: "Nota g", dosya: "g.jpg" },
-            { ad: "Nota h", dosya: "h.jpg" },
-            { ad: "Nota i", dosya: "i.jpg" },
-            { ad: "Nota j", dosya: "j.jpg" },
-            { ad: "Nota k", dosya: "k.jpg" },
-            { ad: "Nota l", dosya: "l.jpg" },
-            { ad: "Nota m", dosya: "m.jpg" },
-            { ad: "Nota n", dosya: "n.jpg" },
-            { ad: "Nota o", dosya: "o.jpg" },
-            { ad: "Nota p", dosya: "p.jpg" },
-            { ad: "Nota r", dosya: "r.jpg" },
-            { ad: "Nota s", dosya: "s.jpg" },
-            { ad: "Nota t", dosya: "t.jpg" },
-            { ad: "Nota u", dosya: "u.jpg" }
+            { ad: "Gelin Ayşem", dosya: "a.jpg" },
+            { ad: "Eklemedir Koca Konak", dosya: "b.jpg" },
+            { ad: "Urfa'nın Etrafı", dosya: "c.jpg" },
+            { ad: "Yeşil Başlı Telli Turnam", dosya: "d.jpg" },
+            { ad: "Karahisar Kalesi", dosya: "e.jpg" },
+            { ad: "Urfa'nın Etrafı Dumanlı Dağlar", dosya: "f.jpg" },
+            { ad: "Uzun İnce Bir Yoldayım", dosya: "g.jpg" },
+            { ad: "İşte Gidiyorum Çeşm-i Siyahım", dosya: "h.jpg" },
+            { ad: "Basit Türküler", dosya: "i.jpg" },
+            { ad: "Felek Çakmağını Üstüme Çaktı", dosya: "j.jpg" },
+            { ad: "Telli Turnam", dosya: "k.jpg" },
+            { ad: "Emirim Suya Gider", dosya: "l.jpg" },
+            { ad: "Denizlerin Kumuyum", dosya: "m.jpg" },
+            { ad: "Aynalı Körük", dosya: "n.jpg" },
+            { ad: "Değmen Benim Gamlı Yaslı Gönlüme", dosya: "o.jpg" },
+            { ad: "Denizin Dibinde Hatçam", dosya: "p.jpg" },
+            { ad: "Kütahyanın Pınarları", dosya: "r.jpg" },
+            { ad: "", dosya: "s.jpg" },
+            { ad: "Han Sarhoş Hancı Sarhoş", dosya: "t.jpg" },
+            { ad: "Altın Yüzüğüm Kırıldı", dosya: "u.jpg" }
         ];
 
         function menuyuAcKapa() { document.getElementById("anaMenu").classList.toggle("aktif"); }
