--- a/online-egitim.html
+++ b/online-egitim.html
@@ -476,8 +476,8 @@
         const parmakEgzersizleri = [
             { ad: "Alıştırma 1", dosya: "aliştirma-1.png" }, // Türkçe karakterlere dikkat
             { ad: "Alıştırma 2", dosya: "aliştirma-2.png" },
-            { ad: "4. Parmak Etüdü 1", dosya: "4-parmak-etutdu1.png" }, // Yazım hatası korundu: etutdu1
-            { ad: "4. Parmak Etüdü 2", dosya: "4-parmak-etudu2.png" }
+            { ad: "4 Parmak Etüdü 1", dosya: "4-parmak-etutdu1.png" }, // Yazım hatası korundu: etutdu1
+            { ad: "4 Parmak Etüdü 2", dosya: "4-parmak-etudu2.png" }
         ];
 
         function menuyuAcKapa() { document.getElementById("anaMenu").classList.toggle("aktif"); }
