--- a/online-egitim.html
+++ b/online-egitim.html
@@ -403,9 +403,9 @@
     <script>
         // --- 1. ÖĞRENCİ VERİTABANI ---
         const ogrenciler = {
-            "amanbecano": { ad: "Gokuğ", soyad: "PAINTER" },
-            "elifkarman123": { ad: "Elif", soyad: "KARMAN" },
-            "mahmut": { ad: "Mahmut Burak", soyad: "ASLANTAŞ" }
+            "YW1hbnNlbmRlY2Fubw==": { ad: "Gokuğ", soyad: "PAINTER" },
+            "ZWxpZmthcm1hbjEyMw==": { ad: "Elif", soyad: "KARMAN" },
+            "bWFobXV0YnVyYWs=": { ad: "Mahmut Burak", soyad: "ASLANTAŞ" }
         };
 
         // --- 2. DİKTE SES DOSYALARI ---
