--- a/online-egitim.html
+++ b/online-egitim.html
@@ -405,7 +405,7 @@
         const ogrenciler = {
             "YW1hbnNlbmRlY2Fubw==": { ad: "Gokuğ", soyad: "PAINTER" },
             "ZWxpZmthcm1hbjEyMw==": { ad: "Elif", soyad: "KARMAN" },
-            "bWFobXV0YnVyYWs=": { ad: "Mahmut Burak", soyad: "ASLANTAŞ" }
+            "bWFobXV0YnVyYWs=": { ad: "TWFobXV0IEJ1cmFr", soyad: "ASLANTAŞ" }
         };
 
         // --- 2. DİKTE SES DOSYALARI ---
